# rust-task-tracker

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
docs/: DESIGN_PATTERNS.md  ESTIMATION.md  REFACTORING_REPORT.md  TDD_EVIDENCE.md  TEST_PLAN.md
src/: lib.rs  main.rs
src/cli/: commands.rs
src/models/: task.rs
src/patterns/: command.rs  export.rs  factory.rs  mod.rs  strategy.rs
src/services/: export_service.rs  mod.rs  task_service.rs
src/storage/: json_storage.rs  mod.rs
tests/: acceptance.rs  blackbox_service.rs  storage_smoke.rs  tdd_sort.rs  whitebox_service.rs
